crates/ink/tests/ui/contract/fail/module-missing-constructor.stderr
error: missing ink! constructor
 --> tests/ui/contract/fail/module-missing-constructor.rs:2:1
  |
2 | mod contract {
  | ^^^
